istio-sec/authorize.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ecommerce-auth-policy
  namespace: default
spec:
  selector:
    matchLabels:
      app: payment
  rules:
  - from:
    - source:
        namespaces: ["foo"]
    to:
    - operation:
        methods: ["GET"]
  action: DENY
